<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.akitektuo.smartlist.activity.SettingsActivity">

    <RelativeLayout
        android:id="@+id/layout_settings_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimaryBlue"
        android:elevation="4dp">

        <TextView
            android:id="@+id/text_title_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="10dp"
            android:background="@drawable/back_white" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_settings_utilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryBlue"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/utilities"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/switch_settings_recommendations"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_settings_recommendations"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/recommendation_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_settings_recommendations"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/recommendations"
                            android:textColor="@color/colorPrimaryBlue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_settings_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/recommendations_status"
                            android:textColor="@color/colorAccentBlack" />

                    </LinearLayout>

                </LinearLayout>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switch_settings_recommendations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:kswTintColor="@color/colorAccentBlue" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/image_settings_0"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDarkBlue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_fill"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/switch_settings_fill"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_settings_fill"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/fill_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_settings_fill"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fill"
                            android:textColor="@color/colorPrimaryBlue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_settings_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/fill_status"
                            android:textColor="@color/colorAccentBlack" />

                    </LinearLayout>

                </LinearLayout>

                <com.kyleduo.switchbutton.SwitchButton
                    android:id="@+id/switch_settings_fill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:kswTintColor="@color/colorAccentBlue" />

            </RelativeLayout>

            <TextView
                android:id="@+id/text_settings_personalization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryBlue"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/personalization"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/image_settings_currency"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/currency_blue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_settings_currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textColor="@color/colorPrimaryBlue"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_settings_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="@string/currency_status"
                        android:textColor="@color/colorAccentBlack" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/text_settings_advanced"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryBlue"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/advanced_settings"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_settings_products"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/product_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_settings_products"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/products"
                            android:textColor="@color/colorPrimaryBlue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_settings_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/products_status"
                            android:textColor="@color/colorAccentBlack" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <ImageView
                android:id="@+id/image_settings_1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDarkBlue" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:id="@+id/layout_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_settings_limit"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/limit_blue" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_settings_limit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/limit"
                            android:textColor="@color/colorPrimaryBlue"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/text_settings_4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:text="@string/limit_status"
                            android:textColor="@color/colorAccentBlack" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
